deployment/aggregate-gateway/overlays/preview/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aggregate-gateway
spec:
  selector:
    app.kubernetes.io/name: aggregate-gateway
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
