deployment/aggregate-gateway/overlays/preview/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: aggregate-gateway
  annotations:
    external-dns.alpha.kubernetes.io/hostname: aggregate-gateway-pr-0.tecklab.dk
spec:
  parentRefs:
    - name: external-gateway
      namespace: kgateway-system
  hostnames:
    - aggregate-gateway-pr-0.tecklab.dk
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: aggregate-gateway
          port: 80
